# sf-backend-cpu

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
backend_cpu/: CMakeLists.txt
backend_cpu/src/: sf_backend_cpu.c
cmake/: sf-backend-cpu-config.cmake.in
ops/: CMakeLists.txt
ops/src/: sf_kernel_utils.h  sf_ops_array.c  sf_ops_math.c  sf_ops_matrix.c  sf_ops_state.c  sf_ops_system.c
tools/metadata/: cpu_spec.json
tools/templates/: sf_macros.c.j2  sf_ops_cpu_auto.c.j2
vcpkg-ports/sf-backend-cpu/: portfile.cmake  vcpkg.json
